# torrent-reindex

./: Cargo.toml  README.md
src/: torrent-reindex.rs
test/: test.torrent
test/files/: a  b  c  d  e
test/mismatches/: a  b  c  e
