[package]
name = "torrent-reindex"
version = "0.1.0"
authors = ["the8472"]

[profile.release]
debug = true


[[bin]]

name = "torrent-reindex"

[dependencies]
bdecode = { git = "https://github.com/tmiasko/bdecode-rs" }
rust-crypto = "0.2.36"
walkdir = "0.1"
multimap = "0.3.0"
itertools = "0.5.4"
clap = "2"
rayon = "0.5.0"